--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -150,8 +150,8 @@ async function loadReport() {
 
 
  
+
 ${(() => {
-  const flag = getSupportFlag(subjects);
   return `
     <h4>
       👤 ${student}
@@ -164,14 +164,13 @@ ${(() => {
       </small>
     </h4>
 
-    <p style="font-weight:bold;color:${flag.color}">
-      ${flag.label}
+    <p>
+      ${generateSupportFlag(subjects)}
     </p>
 
     ${generateInsight(subjects)}
   `;
 })()}
-
 
 
 
@@ -271,31 +270,60 @@ function generateInsight(subjects) {
 
 
 
-function getSupportFlag(subjects) {
-  let below = 0;
-  let approaching = 0;
-  let total = 0;
+function generateSupportFlag(subjects) {
+  let scores = [];
+  let belowCount = 0;
+  let subjectAverages = [];
 
-  Object.values(subjects).flat().forEach(r => {
-    total++;
-    if (r.level === "Below Expectations") below++;
-    if (r.level === "Approaching Expectations") approaching++;
+  Object.entries(subjects).forEach(([subject, rows]) => {
+    if (subject === "__admission") return;
+
+    let subjectScores = [];
+
+    rows.forEach(r => {
+      const score = levelToScore(r.level);
+      if (score > 0) {
+        scores.push(score);
+        subjectScores.push(score);
+        if (score === 1) belowCount++;
+      }
+    });
+
+    if (subjectScores.length) {
+      subjectAverages.push(
+        subjectScores.reduce((a, b) => a + b, 0) / subjectScores.length
+      );
+    }
   });
 
-  if (below / total >= 0.4) {
-    return { label: "🔴 Needs Support", color: "#dc3545" };
+  if (!scores.length) return "";
+
+  const overall = scores.reduce((a, b) => a + b, 0) / scores.length;
+
+  /* 🔴 NEEDS SUPPORT */
+  if (
+    overall < 2.3 ||                 // overall struggling
+    belowCount >= 3 ||                // repeated difficulty
+    subjectAverages.filter(a => a <= 2).length >= 2 // weak in 2+ subjects
+  ) {
+    return `<span style="color:#c0392b;font-weight:bold;">🔴 Needs Learning Support</span>`;
   }
 
-  if ((below + approaching) / total >= 0.4) {
-    return { label: "🟡 Needs Monitoring", color: "#ffc107" };
+  /* 🟢 HIGH POTENTIAL */
+  if (
+    overall >= 3.5 &&
+    subjectAverages.every(a => a >= 3) &&
+    subjectAverages.some(a => a >= 4)
+  ) {
+    return `<span style="color:#1e8449;font-weight:bold;">🟢 High Potential</span>`;
   }
 
-  return { label: "🟢 On Track", color: "#28a745" };
+  /* 🟡 DEFAULT */
+  return `<span style="color:#b9770e;font-weight:bold;">🟡 On Track</span>`;
 }
 
 
   
-
   
   /* ===== TERM VIEW ===== */
   if (viewMode.value === "term") {
