--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -51,6 +51,7 @@ const supabase = createClient(
 
 const SYSTEM_YEAR = "2026";
 
+
 function levelToScore(level) {
   switch (level) {
     case "Below Expectations": return 1;
@@ -61,7 +62,14 @@ function levelToScore(level) {
   }
 }
 
+  
 
+const levelColor = {
+  "Below Expectations": "#f8d7da",
+  "Approaching Expectations": "#fff3cd",
+  "Meeting Expectations": "#d4edda",
+  "Exceeding Expectations": "#cce5ff"
+};
 
 
   
@@ -183,13 +191,6 @@ ${(() => {
   `;
 
 })()}
-
-
-
-
-
-
-
 
 
 
