--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -317,8 +317,10 @@ ${recommendations.learner.length ? `
               </td>
             </tr>
           ` : ""}
-        </table>
-      `).join("")}
+               </table>
+      `;
+    }).join("")}
+
     `;
   }).join("");
 }
